# fp-in-scala-exercises

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DEVCONTAINER.md  LICENSE  README.md  SETUP.md  mise.toml
.claude/skills/haskell-review/: SKILL.md
.devcontainer/: devcontainer.json
.devcontainer-image/: Dockerfile  build-image.sh  content-hash.sh
.devcontainer/local-build/: devcontainer.json
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: add_new_language.md  improve_existing_language_contents.md
.github/workflows/: devcontainer.yml  fp-in-sml.yml
fp-in-clojure/: .joker  Makefile  README.md  build.clj  deps.edn  devenv.nix
fp-in-clojure/test/fp_in_clojure/: test_helper.clj
fp-in-clojure/test/fp_in_clojure/exercises/: common.clj
fp-in-haskell/: .envrc  .hlint.yaml  Makefile  README.md  devenv.nix  fp-in-haskell.cabal  hello.cabal
fp-in-haskell/src/FpInHaskell/Answers/: GettingStarted.hs
fp-in-haskell/src/FpInHaskell/Answers/DataStructures/: List.hs  Tree.hs
fp-in-haskell/src/FpInHaskell/Answers/ErrorHandling/: Either.hs  Option.hs  Validated.hs
fp-in-haskell/src/FpInHaskell/Answers/GettingStarted/: AnonymousFunctions.hs  FormatAbsAndFactorial.hs  MonomorphicBinarySearch.hs  MyProgram.hs  PolymorphicFunctions.hs  TestFib.hs
fp-in-haskell/src/FpInHaskell/Answers/Laziness/: LazyList.hs
fp-in-haskell/src/FpInHaskell/Answers/State/: Candy.hs  RNG.hs  State.hs
fp-in-haskell/src/FpInHaskell/Exercises/: GettingStarted.hs
fp-in-haskell/src/FpInHaskell/Exercises/DataStructures/: List.hs  Tree.hs
fp-in-haskell/src/FpInHaskell/Exercises/ErrorHandling/: Either.hs  Option.hs
fp-in-haskell/src/FpInHaskell/Exercises/GettingStarted/: AnonymousFunctions.hs  FormatAbsAndFactorial.hs  MonomorphicBinarySearch.hs  MyProgram.hs  PolymorphicFunctions.hs  TestFib.hs
fp-in-haskell/src/FpInHaskell/Exercises/Laziness/: LazyList.hs
fp-in-haskell/src/FpInHaskell/Exercises/State/: Candy.hs  RNG.hs  State.hs
fp-in-haskell/test/: DataStructuresSpec.hs  ErrorHandlingSpec.hs  GettingStartedSpec.hs  LazinessSpec.hs  Main.hs  StateSpec.hs
fp-in-haskell/test/FpInHaskell/Test/: Common.hs
fp-in-ocaml/: .gitignore  README.md  dune-project  flake.nix
fp-in-ocaml/answers/: dune  getting_started.ml
fp-in-ocaml/answers/datastructures/: list.ml  tree.ml
fp-in-ocaml/answers/errorhandling/: either.ml  option.ml  validated.ml
fp-in-ocaml/answers/laziness/: lazy_list.ml
fp-in-ocaml/answers/parallelism/: par.ml
fp-in-ocaml/answers/state/: candy.ml  monad.ml  rng.ml
fp-in-ocaml/dune.lock/: lock.dune  qcheck-alcotest.0.91.pkg  relocatable-compiler.5.4.1.20251109.1.pkg
fp-in-ocaml/exercises/: dune  getting_started.ml
fp-in-ocaml/exercises/datastructures/: list.ml  tree.ml
fp-in-ocaml/exercises/errorhandling/: either.ml  option.ml
fp-in-ocaml/exercises/laziness/: lazy_list.ml
fp-in-ocaml/exercises/parallelism/: par.ml
fp-in-ocaml/exercises/state/: candy.ml  monad.ml  rng.ml
fp-in-ocaml/test/: dune  getting_started_test.ml  laziness_lazy_list_test.ml
fp-in-ocaml/test/datastructures/: list_test.ml  tree_test.ml
fp-in-ocaml/test/errorhandling/: either_test.ml  option_test.ml
fp-in-ocaml/test/parallelism/: par_test.ml
fp-in-ocaml/test/state/: candy_test.ml  monad_test.ml  rng_test.ml
fp-in-scala/: Makefile  README.md  build.sbt  devenv.nix
fp-in-scala/project/: plugins.sbt
fp-in-sml/: .gitignore  Main.sml  Makefile  README.md  flake.nix  millet.toml
fp-in-sml/docs/: maintain.md  sml-primer.md
fp-in-sml/lib/: Pbt.sml  Stub.sml  Test.sml  lib.cm  lib.mlb
fp-in-sml/src/ch02_gettingstarted/: INTRO.sig
fp-in-sml/src/ch02_gettingstarted/answers/: Intro.sml
fp-in-sml/src/ch02_gettingstarted/exercises/: Intro.sml
fp-in-sml/src/ch03_datastructures/: MY_LIST.sig  TREE.sig
fp-in-sml/src/ch03_datastructures/answers/: MyList.sml  Tree.sml
fp-in-sml/src/ch03_datastructures/exercises/: MyList.sml  Tree.sml
fp-in-sml/src/ch04_errorhandling/: EITHER.sig  MY_OPTION.sig
fp-in-sml/src/ch04_errorhandling/answers/: Either.sml  MyOption.sml
fp-in-sml/src/ch04_errorhandling/exercises/: Either.sml  MyOption.sml
fp-in-sml/src/ch05_laziness/: LAZY_LIST.sig
fp-in-sml/src/ch05_laziness/answers/: LazyList.sml
fp-in-sml/src/ch05_laziness/exercises/: LazyList.sml
fp-in-sml/src/ch06_state/: RNG.sig  STATE.sig
fp-in-sml/src/ch06_state/answers/: Rng.sml  State.sml
fp-in-sml/src/ch06_state/exercises/: Rng.sml  State.sml
fp-in-sml/src/ch08_testing/: GEN.sig  PROP.sig
fp-in-sml/src/ch08_testing/answers/: Gen.sml  Prop.sml
fp-in-sml/src/ch08_testing/exercises/: Gen.sml  Prop.sml
fp-in-sml/src/ch09_parsing/: JSON.sig  Json.sml  PARSER.sig
fp-in-sml/src/ch09_parsing/answers/: Parser.sml
fp-in-sml/src/ch09_parsing/exercises/: Parser.sml
fp-in-sml/src/ch10_monoids/: MONOID.sig
fp-in-sml/src/ch10_monoids/answers/: Monoids.sml
fp-in-sml/src/ch10_monoids/exercises/: Monoids.sml
fp-in-sml/src/ch11_monads/: MONAD.sig  MonadInstances.sml
fp-in-sml/src/ch11_monads/answers/: MonadUtil.sml
fp-in-sml/src/ch11_monads/exercises/: MonadUtil.sml
fp-in-sml/src/ch12_applicative/: APPLICATIVE.sig  ApplicativeInstances.sml
fp-in-sml/src/ch13_iomonad/: MY_IO.sig
fp-in-sml/src/ch14_localeffects/: LOCAL_EFFECTS.sig
fp-in-sml/src/ch15_streamingio/: PROCESS.sig
fp-in-sml/test/ch02_gettingstarted/: IntroTest.sml
fp-in-sml/test/ch03_datastructures/: MyListTest.sml  TreeTest.sml
fp-in-sml/test/ch04_errorhandling/: EitherTest.sml  MyOptionTest.sml
fp-in-sml/test/ch05_laziness/: LazyListTest.sml
fp-in-sml/test/ch06_state/: RngTest.sml  StateTest.sml
fp-in-sml/test/ch08_testing/: GenTest.sml  PropTest.sml
fp-in-sml/test/ch09_parsing/: JsonTest.sml  ParserTest.sml
fp-in-sml/test/ch10_monoids/: MonoidsTest.sml
fp-in-sml/test/ch11_monads/: MonadTest.sml
fp-in-sml/test/ch12_applicative/: ApplicativeTest.sml
fp-in-sml/test/ch13_iomonad/: MyIOTest.sml
fp-in-sml/test/ch14_localeffects/: LocalEffectsTest.sml
fp-in-sml/test/ch15_streamingio/: ProcessTest.sml
(+114 files in other folders)
