cabal-version: 2.4
name:          fp-in-haskell
version:       0.1.0.0
build-type:    Simple

library
  hs-source-dirs:   src
  exposed-modules:
    FpInHaskell.Answers.GettingStarted
    FpInHaskell.Exercises.GettingStarted
  build-depends:    base >=4.2 && <5
  default-language: Haskell2010

test-suite getting-started-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  other-modules:
    FpInHaskell.Test.Common
    GettingStartedSpec
  build-depends:
    base         >=4.2 && <5,
    QuickCheck,
    fp-in-haskell
  default-language: Haskell2010
