cabal-version: 2.4
name:          fp-in-haskell
version:       0.1.0.0
build-type:    Simple

library
  hs-source-dirs:   src
  exposed-modules:
    FpInHaskell.Answers.DataStructures.List
    FpInHaskell.Answers.DataStructures.Tree
    FpInHaskell.Answers.ErrorHandling.Either
    FpInHaskell.Answers.ErrorHandling.Option
    FpInHaskell.Answers.ErrorHandling.Validated
    FpInHaskell.Answers.GettingStarted.AnonymousFunctions
    FpInHaskell.Answers.GettingStarted.FormatAbsAndFactorial
    FpInHaskell.Answers.GettingStarted.MonomorphicBinarySearch
    FpInHaskell.Answers.GettingStarted.MyProgram
    FpInHaskell.Answers.GettingStarted.PolymorphicFunctions
    FpInHaskell.Answers.GettingStarted.TestFib
    FpInHaskell.Exercises.DataStructures.List
    FpInHaskell.Exercises.DataStructures.Tree
    FpInHaskell.Exercises.ErrorHandling.Either
    FpInHaskell.Exercises.ErrorHandling.Option
    FpInHaskell.Exercises.GettingStarted.AnonymousFunctions
    FpInHaskell.Exercises.GettingStarted.FormatAbsAndFactorial
    FpInHaskell.Exercises.GettingStarted.MonomorphicBinarySearch
    FpInHaskell.Exercises.GettingStarted.MyProgram
    FpInHaskell.Exercises.GettingStarted.PolymorphicFunctions
    FpInHaskell.Exercises.GettingStarted.TestFib
  build-depends:    base >=4.2 && <5
  default-language: Haskell2010

test-suite fp-in-haskell-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  other-modules:
    DataStructuresSpec
    ErrorHandlingSpec
    FpInHaskell.Test.Common
    GettingStartedSpec
  build-depends:
    base         >=4.2 && <5,
    QuickCheck,
    fp-in-haskell
  default-language: Haskell2010
