cabal-version: 2.4
name:          hello
version:       1.0.0.2
license:       BSD-3-Clause
license-file:  LICENSE
copyright:     (c) Simon Marlow
author:        Simon Marlow
maintainer:    Simon Marlow <marlowsd@gmail.com>
bug-reports:   mailto:marlowsd@gmail.com
stability:     stable
homepage:      http://www.haskell.org/hello/
synopsis:      Hello World, an example package
category:      Console, Text
build-type:    Simple
description:
  This is an implementation of the classic "Hello World" program in
  Haskell, as an example of how to create a minimal Haskell
  application using Cabal and Hackage.  Please submit any suggestions and
  improvements.

source-repository head
  type:     darcs
  location: http://darcs.haskell.org/hello/

flag threaded
  default: False

library
  hs-source-dirs:   src
  exposed-modules:
    FpInHaskell.Answers.GettingStarted
  build-depends:    base >=4.2 && <5
  default-language: Haskell2010

test-suite getting-started-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  other-modules:
    FpInHaskell.Test.Common
    GettingStartedSpec
  build-depends:
    base     >=4.2 && <5,
    QuickCheck,
    hello
  default-language: Haskell2010

executable hello
  hs-source-dirs: src
  main-is:        hello.hs
  build-depends:  base >=4.2 && <5

  if flag(threaded)
    ghc-options: -threaded
