(test
 (name getting_started_test)
 (libraries alcotest exercises answers))

(subdir
 datastructures
 (tests
  (names list_test tree_test)
  (libraries alcotest exercises answers)))

(subdir
 errorhandling
 (tests
  (names option_test either_test)
  (libraries alcotest exercises answers)))

(test
 (name laziness_lazy_list_test)
 (libraries alcotest exercises answers))

(subdir
 state
 (tests
  (names rng_test monad_test candy_test)
  (libraries alcotest exercises answers)))

(subdir
 parallelism
 (tests
  (names par_test)
  (libraries alcotest exercises answers)))
